--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                         <li>
                             <a id="sidebarCollapse">
                                 Cart
-                                <span id="idCartCount" class="glyphicon glyphicon-shopping-cart CartCount badge"></span>
+                                <span id="idCartCount" class="glyphicon glyphicon-shopping-cart  badge"></span>
                             </a>
 
                         </li>
@@ -71,7 +71,7 @@
                 </div>
             </header>
             <main>
-                <div>
+                <div  >
                     @RenderSection("Scripts", required: false)
                     @RenderBody()
                 </div>
