--- a/WebShop/Views/Shared/_OrderReceipt.cshtml
+++ b/WebShop/Views/Shared/_OrderReceipt.cshtml
@@ -90,3 +90,24 @@
 
 
 }
+
+<script>
+
+    $(function () {
+        $.ajax({
+            type: "GET",
+            url: CartCountPostBackURL,
+            contentType: "application/json; charset=utf-8",
+
+            datatype: "json",
+            success: function (data) {
+                $('#idCartCount').html(data);
+            },
+            error: function () {
+                alert("Dynamic content load failed.");
+            }
+        });
+
+
+    });
+</script>
