--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -24,9 +24,9 @@
                      <a href="javascript:void(0);" class="anchorEdit btn btn-primary" data-id="@item.ProductId">Edit</a>
                 </div>
 
-                @*@if (User.IsInRole("Admin"))
-                {*@
-                    @*<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editProduct">Edit</button>
+                @if (User.IsInRole("Admin"))
+                {
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editProduct">Edit</button>
 
                     <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="editProductLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
@@ -63,8 +63,8 @@
                     <div class="product-cards__edit">
                       <input type="submit" onclick="location.href = '@Url.Action("EditClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnEdit" value="ProtoEdit" />
 
-                    </div>*@
-                @*}*@
+                    </div>
+                }
             </div>
         </div>
     }
