--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -18,10 +18,11 @@
                     SEK @item.Price
                 </div>
                 <div class="product-cards__add-to-cart">
+                    <a href="javascript:void(0);" class="anchorDetail btn btn-primary" data-id="@item.ProductId">Details</a>
                     <a id="btn_add" href="@Url.Action("BuyClicked","Home", new { productId=item.ProductId})" class="btn btn-primary">
                         <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
                     </a>
-                     <a href="javascript:void(0);" class="anchorEdit btn btn-primary" data-id="@item.ProductId">Edit</a>
+                    <a href="javascript:void(0);" class="anchorEdit btn btn-primary" data-id="@item.ProductId">Edit</a>
                 </div>
 
                 @if (User.IsInRole("Admin"))
@@ -61,7 +62,7 @@
                         </div>
                     </div>
                     <div class="product-cards__edit">
-                      <input type="submit" onclick="location.href = '@Url.Action("EditClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnEdit" value="ProtoEdit" />
+                        <input type="submit" onclick="location.href = '@Url.Action("EditClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnEdit" value="ProtoEdit" />
 
                     </div>
                 }
