Fixed edit Order, save does't work yet.

--- a/WebShop/Areas/Admin/Views/OrderModel/DeletePart.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/DeletePart.cshtml
@@ -53,13 +53,7 @@
                                                      OrderId=Model.OrderId,
                                                      ProductId=Model.ProductId,
                                                      Quantity=Model.Quantity})'">Delete</a> |
-        <a asp-action="Details" asp-route-id="@Model.OrderId">Back to OrderDetails</a>
-
+        <a asp-action="Details" asp-route-id="@Model.OrderId">Back to Details</a>
     </div>
-
-    @*<form asp-action="DeletePartConfirmed">
-        <input type="hidden" asp-for="OrderId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-
-    </form>*@
 </div>
+<br>
