--- a/WebShop/Areas/Admin/Views/OrderModel/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/Index.cshtml
@@ -16,6 +16,15 @@
                 @Html.DisplayNameFor(model => model.User.UserName)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.User.Street)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.User.ZipCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.User.City)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
             <th></th>
@@ -32,16 +41,26 @@
                     @Html.DisplayFor(modelItem => item.User.UserName)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.User.Street)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.User.ZipCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.User.City)
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.Date)
                 </td>
                 <td>
-                    @*<a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |*@
-                    @*<a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>*@
-
+                    <a href="#" onclick="location.href = '@Url.Action("EditOrder", "OrderModel", new {
+                                                         OrderId=item.OrderId,
+                                                         UserId=item.User.Id,
+                                                         Date=item.Date,
+                                                         User=item.User})'">Edit</a> |
+                    @*<a asp-action="EditOrder" asp-route-id="@item.OrderId">Edit</a> |*@
                     <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
                     <a asp-action="DeleteOrder" asp-route-id="@item.OrderId">Delete</a>
-
                 </td>
             </tr>
         }
