--- a/WebShop/Areas/Admin/Views/OrderModel/EditPart.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/EditPart.cshtml
@@ -33,7 +33,7 @@
                 <input asp-for="Product.Price" class="form-control" style="width:auto" />
                 <span asp-validation-for="Product.Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Order.User.Street" class="control-label"></label>
                 <input asp-for="Order.User.Street" class="form-control" style="width:auto" />
                 <span asp-validation-for="Order.User.Street" class="text-danger"></span>
@@ -47,7 +47,7 @@
                 <label asp-for="Order.User.City" class="control-label"></label>
                 <input asp-for="Order.User.City" class="form-control" style="width:auto" />
                 <span asp-validation-for="Order.User.City" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
