--- a/WebShop/Areas/Admin/Views/OrderModel/EditPart.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/EditPart.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
+            <input type="hidden" asp-for="OrderId" />
             <div class="form-group">
                 <label asp-for="Order.User.UserName" class="control-label"></label>
                 <input asp-for="Order.User.UserName" class="form-control" readonly style="width:auto" />
@@ -33,23 +34,8 @@
                 <input asp-for="Product.Price" class="form-control" style="width:auto" />
                 <span asp-validation-for="Product.Price" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                <label asp-for="Order.User.Street" class="control-label"></label>
-                <input asp-for="Order.User.Street" class="form-control" style="width:auto" />
-                <span asp-validation-for="Order.User.Street" class="text-danger"></span>
-            </div>
             <div class="form-group">
-                <label asp-for="Order.User.ZipCode" class="control-label"></label>
-                <input asp-for="Order.User.ZipCode" class="form-control" style="width:auto" />
-                <span asp-validation-for="Order.User.ZipCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Order.User.City" class="control-label"></label>
-                <input asp-for="Order.User.City" class="form-control" style="width:auto" />
-                <span asp-validation-for="Order.User.City" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" asp-action="EditPartConfirmed" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
