--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -15,14 +15,14 @@
 </head>
 <body>
     <div class="wrapper">
-        @if (User.Identity.IsAuthenticated)
-         {
+        @*@if (User.Identity.IsAuthenticated)
+         {*@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <h3>Shopping Cart</h3>
             </div>
             <div id="cartDetails">
-                <partial name="_partialShoppingCart" />
+                @*<partial name="_partialShoppingCart" />*@
             </div>
             
             <div id="proceedOrder">
@@ -32,21 +32,10 @@
 
             </div>
         </nav>
-         }
+         @*}*@
 
         <div id="content">
-            @*@if (User.Identity.IsAuthenticated)
-            {
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                        <button type="button" id="sidebarCollapse" class="btn btn-info">
-                            <i class="fas fa-align-left"></i>
-                            <span><partial name="_partialCartSummary" /> </span>
-                        </button>
-                    </div>
-                </nav>
-            }*@
-           
+                     
             <header>
                 <h1 class="text-center">Web Shop</h1>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -63,7 +52,7 @@
                         <li>
                             <a id="sidebarCollapse">
                                 Cart
-                                <span id="idCartCount" class="glyphicon glyphicon-shopping-cart  badge"></span>
+                                <span id="idCartCount" class=" glyphicon glyphicon-shopping-cart badge"></span>
                             </a>
 
                         </li>
