Added modal button to create product.

--- a/WebShop/Areas/Admin/Views/UserModel/Edit.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Edit.cshtml
@@ -8,7 +8,7 @@
 <h2>Edit</h2>
 
 <hr />
-<h4>ProductModel</h4>
+<h4>UserModel</h4>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
