--- a/WebShop/Areas/Admin/Views/UserModel/Delete.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ProductModel</h4>
+    <h4>UserModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
