--- a/WebShop/Areas/Admin/Views/UserModel/Details.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Details.cshtml
@@ -6,7 +6,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>ProductModel</h4>
+    <h4>UserModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
