--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -21,12 +21,16 @@
 
                     <a href="javascript:void(0);" class="anchorDetail btn btn-primary" data-id="@item.ProductId">Details</a>
                     <a id="btn_add" href="@Url.Action("BuyClicked","Home", new { productId=item.ProductId})" class="btn btn-primary">
-                         <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                        <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
                     </a>
-                    <a href="javascript:void(0);" class="anchorEdit btn btn-primary" data-id="@item.ProductId">Edit</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a href="javascript:void(0);" class="anchorEdit btn btn-primary" data-id="@item.ProductId">Edit</a>
+                        <a href="javascript:void(0);" class="anchorDelete btn btn-primary" data-id="@item.ProductId">Delete</a>
+                    }
                 </div>
 
-                @if (User.IsInRole("Admin"))
+                @*@if (User.IsInRole("Admin"))
                 {
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editProduct">Edit</button>
 
@@ -66,7 +70,7 @@
                         <input type="submit" onclick="location.href = '@Url.Action("EditClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnEdit" value="ProtoEdit" />
 
                     </div>
-                }
+                }*@
             </div>
         </div>
     }
