--- a/WebShop/Areas/User/Views/OrderHistory/Index.cshtml
+++ b/WebShop/Areas/User/Views/OrderHistory/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<WebShop.Models.ProductOrderModel>
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "OrderHistory";
 }
 
-<h2>Details</h2>
+<h2>Order History</h2>
 
 <table class="table">
     <thead>
@@ -59,6 +59,8 @@
 </table>
 
 
-<p>
+
+
+@*<p>
     @ViewBag.userId
-</p>
+</p>*@
