--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -43,20 +43,18 @@
                         <li class="nav-item">
                             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li>
+                        <li class="nav-item">
                             <partial name="_AdminMenuPartial" />
                         </li>
-                        <li>
+                        <li class="nav-item" >
                             <partial name="_OrderHistory" />   
                         </li>
 
-                        <li>
+                        <li class="nav-item" >
                             <partial name="_LoginPartial" />
                         </li>
 
 
-
-                     
                     </ul>
                     <ul class="nav navbar-nav navbar-left">
                         <li>
