--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -26,7 +26,7 @@
                     @if (User.IsInRole("Admin"))
                     {
                         <a href="javascript:void(0);" class="anchorEdit btn btn-primary" data-id="@item.ProductId">Edit</a>
-                        @*<a href="javascript:void(0);" class="anchorDelete btn btn-primary" data-id="@item.ProductId">Delete</a>*@
+                        <a href="javascript:void(0);" class="anchorDelete btn btn-primary" data-id="@item.ProductId">Delete</a>
                     }
                 </div>
 
