--- a/WebShop/Views/Shared/_partialDeleteProduct.cshtml
+++ b/WebShop/Views/Shared/_partialDeleteProduct.cshtml
@@ -10,7 +10,7 @@
     </div>
     <!-- Main modal -->
     <div class="modal-body">
-        <h2>Delete</h2>
+        @*<h2>Delete</h2>
 
         <h3>Are you sure you want to delete this?</h3>
         <div>
@@ -41,7 +41,7 @@
                 <dd>
                     @Html.DisplayFor(model => model.ImageName)
                 </dd>
-            </dl>
+            </dl>*@
             <form asp-action="Delete" asp-controller="Home">
                 <div class="form-group">
                     <input type="hidden" asp-for="ImageName">
@@ -53,7 +53,6 @@
                 </div>
             </form>
         </div>
-        <hr />
         
     </div>
     <div class="modal-footer">
