--- a/WebShop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WebShop/Areas/Identity/Pages/Account/Register.cshtml
@@ -56,7 +56,7 @@
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
+        @*<section>
             <h4>Use another service to register.</h4>
             <hr />
             @{
@@ -83,7 +83,7 @@
                     </form>
                 }
             }
-        </section>
+        </section>*@
     </div>
 </div>
 
