--- a/WebShop/Areas/Admin/Views/OrderModel/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/Index.cshtml
@@ -13,13 +13,13 @@
                 @Html.DisplayNameFor(model => model.OrderId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.User.UserName)
+                @Html.DisplayName("User Name")
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.User.Street)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.User.ZipCode)
+                @Html.DisplayName("Zip Code")
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.User.City)
