--- a/WebShop/Areas/Admin/Views/UserModel/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Index.cshtml
@@ -34,7 +34,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) 
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -60,6 +61,6 @@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
