--- a/WebShop/Areas/Admin/Views/OrderModel/DeleteOrder.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/DeleteOrder.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Delete</h2>
+<hr />
 <h3>Are you sure you want to delete the whole order?</h3>
 
 <table class="table">
@@ -14,7 +15,7 @@
                 @Html.DisplayNameFor(model => model.OrderId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.User.UserName)
+                @Html.DisplayName("User Name")
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
