--- a/WebShop/Areas/Admin/Views/OrderModel/DeletePart.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/DeletePart.cshtml
@@ -7,9 +7,9 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
+<hr />
 <div>
     <h4>Order</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.OrderId)
@@ -24,13 +24,13 @@
             @Html.DisplayFor(model => model.Order.Date)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Order.User.UserName)
+            @Html.DisplayName("User Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Order.User.UserName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Product.ProductName)
+            @Html.DisplayName("Product Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Product.ProductName)
@@ -48,6 +48,7 @@
             @Html.DisplayFor(model => model.Quantity)
         </dd>
     </dl>
+    <hr />
     <div>
         <a href="#" onclick="location.href = '@Url.Action("DeletePartConfirmed", "OrderModel", new {
                                                      OrderId=Model.OrderId,
