--- a/WebShop/Areas/Admin/Views/OrderModel/EditOrder.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/EditOrder.cshtml
@@ -7,7 +7,6 @@
 <h2>Edit Order</h2>
 
 <hr />
-<h4>ProductOrderModel</h4>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -31,7 +30,7 @@
             <input type="hidden" asp-for="Order.User.FirstName" />
             <input type="hidden" asp-for="Order.User.LastName" />
             <div class="form-group">
-                <label asp-for="Order.User.UserName" class="control-label"></label>
+                <label asp-for="Order.User.UserName" class="control-label">User Name</label>
                 <input asp-for="Order.User.UserName" class="form-control" readonly style="width:auto" />
                 <span asp-validation-for="Order.User.UserName" class="text-danger"></span>
             </div>
@@ -41,7 +40,7 @@
                 <span asp-validation-for="Order.User.Street" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Order.User.ZipCode" class="control-label"></label>
+                <label asp-for="Order.User.ZipCode" class="control-label">Zip Code</label>
                 <input asp-for="Order.User.ZipCode" class="form-control" style="width:auto" />
                 <span asp-validation-for="Order.User.ZipCode" class="text-danger"></span>
             </div>
