--- a/WebShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,12 +18,14 @@
             <header>
                 <h1 class="text-center">Web Shop</h1>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="nav navbar-nav navbar-left">
                         <li class="nav-item">
                             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <partial name="_AdminMenuPartial" />
                         <partial name="_LoginPartial" />
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <partial name="_AdminMenuPartial" />
                     </ul>
                 </div>
             </header>
