--- a/WebShop/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebShop/Views/Shared/_AdminMenuPartial.cshtml
@@ -1,8 +1,8 @@
-﻿@*@if (User.IsInRole("Admin"))
-{*@
+﻿@if (User.IsInRole("Admin"))
+{
     <li class="nav-item dropdown show">
-        <a class ="dropdown-toggle nav-link text-dark" href="#" data-toggle="dropdown">Admin Tools</a>
-        <div class=dropdown-menu>
+        <a class ="dropdown-toggle nav-link" href="#" data-toggle="dropdown">Admin Tools</a>
+        <div class=dropdown-menu style="text-align:center">
             <a class="dropdown-item" asp-area="Admin" asp-controller="ProductModel" asp-action="Index">Product Manager</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" asp-area="Admin" asp-controller="UserModel" asp-action="Index">User Manager</a>
@@ -10,4 +10,4 @@
             <a class="dropdown-item" asp-area="Admin" asp-controller="OrderModel" asp-action="Index">Order Manager</a>
         </div>
     </li>
-@*}*@
+}
