Moved Admin Tools to left

--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                             </a>
                         </li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-left">
                         <partial name="_AdminMenuPartial" />
                     </ul>
                 </div>
