--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="wrapper">
-        @*@if (User.Identity.IsAuthenticated)*@
+        @if (User.Identity.IsAuthenticated)
          {
             <nav id="sidebar">
                 <div class="sidebar-header">
@@ -46,7 +46,7 @@
                     <ul class="nav navbar-nav navbar-left">
                         <li>
                             <a id="sidebarCollapse">
-                                Cartssss
+                                Cart
                                 <span id="idCartCount" class=" glyphicon glyphicon-shopping-cart badge"></span>
                             </a>
                         </li>
