Removed Cart and OrderHistory from Admin.

--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -14,10 +14,13 @@
                     SEK @item.Price
                 </div>
                 <div class="product-cards__add-to-cart">
-                    <a href="javascript:void(0);" class="anchorDetail btn btn-primary" data-id="@item.ProductId">Details</a>
-                    <a id="btn_add" href="@Url.Action("BuyClicked","Home", new { productId=item.ProductId})" class="btn btn-primary">
-                        <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
-                    </a>
+                    @if (!User.Identity.IsAuthenticated || User.IsInRole("User"))
+                    {
+                        <a href="javascript:void(0);" class="anchorDetail btn btn-primary" data-id="@item.ProductId">Details</a>
+                        <a id="btn_add" href="@Url.Action("BuyClicked","Home", new { productId=item.ProductId})" class="btn btn-primary">
+                            <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                        </a>
+                    }
                     @if (User.IsInRole("Admin"))
                     {
                         <a href="javascript:void(0);" class="anchorEdit btn btn-primary" data-id="@item.ProductId">Edit</a>
