--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="wrapper">
-        @if (User.Identity.IsAuthenticated)
+        @if (User.IsInRole("User"))
          {
             <nav id="sidebar">
                 <div class="sidebar-header">
@@ -36,21 +36,27 @@
                         <li class="nav-item">
                             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item" >
-                            <partial name="_OrderHistory" />   
-                        </li>
-                        <li class="nav-item" >
+                        @if (User.IsInRole("User"))
+                        {
+                            <li class="nav-item">
+                                <partial name="_OrderHistory" />
+                            </li>
+                        }
+                        <li class="nav-item">
                             <partial name="_LoginPartial" />
                         </li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-left">
-                        <li>
-                            <a id="sidebarCollapse">
-                                Cart
-                                <span id="idCartCount" class=" glyphicon glyphicon-shopping-cart badge"></span>
-                            </a>
-                        </li>
-                    </ul>
+                    @if (User.IsInRole("User"))
+                    {
+                        <ul class="nav navbar-nav navbar-left">
+                            <li>
+                                <a id="sidebarCollapse">
+                                    Cart
+                                    <span id="idCartCount" class=" glyphicon glyphicon-shopping-cart badge"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    }
                     <ul class="nav navbar-nav navbar-left">
                         <partial name="_AdminMenuPartial" />
                     </ul>
