--- a/WebShop/Areas/Admin/Views/UserModel/Delete.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Delete.cshtml
@@ -29,12 +29,7 @@
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
-
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <a asp-action="DeleteConfirmed" asp-route-id="@Model.Id">Delete</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
